--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicos Matones</h1></div>
+										<div class="home_title"><h1>Especialistas en tu salud dental</h1></div>
 										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
+											<p>Descubre un cuidado dental de calidad en un ambiente acogedor. Nuestro equipo está aquí para ayudarte a mantener una sonrisa saludable y brillante. </p>
 										</div>
 										<!-- <div class="button home_button"> -->
 											<!-- <a href="#">read more</a> -->
@@ -150,7 +150,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicine made with care</h1></div>
+										<div class="home_title"><h1>Dental</h1></div>
 										<div class="home_text">
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
 										</div>
@@ -172,7 +172,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicine made with care</h1></div>
+										<div class="home_title"><h1>Dental</h1></div>
 										<div class="home_text">
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
 										</div>
@@ -228,7 +228,7 @@
 					<div class="box box_appointments">
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 29px; height:29px;"><img src="images/phone-call.svg" alt=""></div></div>
 						<div class="box_title">Citas</div>
-						<div class="box_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam cons equat semper sollicitudin.</div>
+						<div class="box_text">Para una atención inmediata o preguntas, llámanos y te ayudaremos a coordinar tu cita.</div>
 					</div>
 				</div>
 
@@ -238,7 +238,7 @@
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 37px; height:37px; margin-left:-4px;"><img src="images/bell.svg" alt=""></div></div>
 						<div class="box_title">Emergencias</div>
 						<div class="box_phone">+52 8111 4567</div>
-						<div class="box_emergency_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo.</div>
+						<div class="box_emergency_text">Para citas urgentes o asistencia, contáctanos y te ayudaremos a encontrar el mejor momento para ti.</div>
 					</div>
 				</div>
 
@@ -257,7 +257,7 @@
 					<div class="about_content">
 						<div class="section_title"><h2>El mejor equipo para tu atencion</h2></div>
 						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
+							<p>"Desde limpiezas rutinarias hasta tratamientos especializados, ofrecemos una amplia gama de servicios para atender todas tus necesidades dentales. Conoce más sobre cada uno de ellos a continuación. Nuestro equipo de dentistas combina años de experiencia con una pasión por la excelencia, ofreciendo cuidado especializado en ortodoncia, periodoncia y endodoncia."</p>
 						</div>
 						<!-- <div class="button about_button"> -->
 							<!-- <a href="#">read more</a> -->
@@ -280,7 +280,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title section_title_light"><h2>Departamentos</h2></div>
+					<div class="section_title section_title_light"><h2>Servicios</h2></div>
 				</div>
 			</div>
 			<div class="row departments_row row-md-eq-height">
@@ -312,7 +312,7 @@
 					<div class="dept">
 						<div class="dept_image"><img src="images/dept_3.jpg" alt=""></div>
 						<div class="dept_content text-center">
-							<div class="dept_title">Desparacitacion</div>
+							<div class="dept_title">Limpiezas</div>
 							<!-- <div class="dept_subtitle">Dr. Maria Williams</div> -->
 						</div>
 					</div>
@@ -322,7 +322,7 @@
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
 						<div class="dept_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex.</p>
+							<p>Nuestros dentistas y personal están altamente cualificados y dedicados a tu bienestar dental. Aprende más sobre sus experiencias y especialidades.</p>
 						</div>
 						<!-- <div class="button dept_button"><a href="#">read more</a></div> -->
 					</div>
@@ -331,125 +331,13 @@
 		</div>
 	</div>
 
-	<!-- Services -->
-
-	<div class="services">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title"><h2>Servicios</h2></div>
-				</div>
-			</div>
-			<!-- <div class="row services_row"> -->
-				
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_1.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">Free Checkups</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_2.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">Screening Exams</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_3.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">RMI Services</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_4.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">Dentistry</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_5.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">Neonatology</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-
-				<!-- <!-- Service --> -->
-				<!-- <div class="col-lg-4 col-md-6 service_col"> -->
-					<!-- <a href="services.html"> -->
-						<!-- <div class="service text-center trans_200"> -->
-							<!-- <div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div> -->
-							<!-- <div class="service_title trans_200">Biochemistry</div> -->
-							<!-- <div class="service_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </a> -->
-				<!-- </div> -->
-			<!-- </div> -->
-		<!-- </div> -->
-	<!-- </div> -->
-
-	<!-- <!-- Call to action --> -->
-
-	<!-- <div class="cta"> -->
-		<!-- <div class="cta_background parallax-window" data-parallax="scroll" data-image-src="images/cta.jpg" data-speed="0.8"></div> -->
-		<!-- <div class="container"> -->
-			<!-- <div class="row"> -->
-				<!-- <div class="col"> -->
-					<!-- <div class="cta_content text-center"> -->
-						<!-- <h2>Need a personal health plan?</h2> -->
-						<!-- <p>Duis massa massa, mollis vel ullamcorper quis, finibus et urna. Aliquam ac eleifend metus. Ut sollicitudin risus ex</p> -->
-						<!-- <div class="button cta_button"><a href="#">request a plan</a></div> -->
-					<!-- </div> -->
-				<!-- </div> -->
-			<!-- </div> -->
-		<!-- </div>		 -->
-	<!-- </div> -->
-
-	<!-- <!-- Footer --> -->
-
-	<!-- <footer class="footer"> -->
-		<!-- <div class="footer_container"> -->
-			<!-- <div class="container"> -->
-				<!-- <div class="row"> -->
+	<footer class="footer">
+		<div class="footer_container">
+			<div class="container">
+				<div class="row">
 					
-					<!-- <!-- Footer - About --> -->
-					<!-- <div class="col-lg-4 footer_col"> -->
-						<!-- <div class="footer_about"> -->
+					<div class="col-lg-4 footer_col">
+						<div class="footer_about">
 							<!-- <div class="footer_logo_container"> -->
 								<!-- <a href="#" class="d-flex flex-column align-items-center justify-content-center"> -->
 									<!-- <div class="logo_content"> -->
@@ -461,86 +349,53 @@
 									<!-- </div> -->
 								<!-- </a> -->
 							<!-- </div> -->
-							<!-- <div class="footer_about_text"> -->
-								<!-- <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum.</p> -->
-							<!-- </div> -->
-							<!-- <ul class="footer_about_list"> -->
-								<!-- <li><div class="footer_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+45 677 8993000 223</span></li> -->
-								<!-- <li><div class="footer_about_icon"><img src="images/envelope.svg" alt=""></div><span>office@template.com</span></li> -->
-								<!-- <li><div class="footer_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832, Los Angeles, CA</span></li> -->
-							<!-- </ul> -->
-						<!-- </div> -->
-					<!-- </div> -->
+							<div class="footer_about_text">
+								<p>Estamos aquí para resolver tus dudas y ayudarte a agendar una cita. No dudes en ponerte en contacto con nosotros.</p>
+							</div>
+							<ul class="footer_about_list">
+								<li><div class="footer_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+52 8111 4567</span></li>
+								<li><div class="footer_about_icon"><img src="images/envelope.svg" alt=""></div><span>dentista@dentista.com</span></li>
+								<li><div class="footer_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Constitucion 123, Monterrey, N.L.</span></li>
+							</ul>
+						</div>
+					</div>
 
-					<!-- <!-- Footer - Links --> -->
-					<!-- <div class="col-lg-4 footer_col"> -->
-						<!-- <div class="footer_links footer_column"> -->
-							<!-- <div class="footer_title">Useful Links</div> -->
-							<!-- <ul> -->
-								<!-- <li><a href="#">Testimonials</a></li> -->
-								<!-- <li><a href="#">FAQ</a></li> -->
-								<!-- <li><a href="#">Apply for a Job</a></li> -->
-								<!-- <li><a href="#">Terms & Conditions</a></li> -->
-								<!-- <li><a href="#">Our Partners</a></li> -->
-								<!-- <li><a href="#">Services</a></li> -->
-								<!-- <li><a href="#">Free services</a></li> -->
-								<!-- <li><a href="#">About us</a></li> -->
-								<!-- <li><a href="#">News</a></li> -->
-								<!-- <li><a href="#">Contact</a></li> -->
-								<!-- <li><a href="#">Our Screening Program</a></li> -->
-								<!-- <li><a href="#">FAQ</a></li> -->
-							<!-- </ul> -->
-						<!-- </div> -->
-					<!-- </div> -->
+					<div class="col-lg-4 footer_col">
+						<div class="footer_links footer_column">
+							<div class="footer_title">Redes Sociales</div>
+							<ul>
+								<li><a href="#">Facebook</a></li>
+								<li><a href="#">Instagram</a></li>
+								<li><a href="#">X</a></li>
+								<li><a href="#">Youtube</a></li>
+								<li><a href="#">TikTok</a></li>
+							</ul>
+						</div>
+					</div>
 
-					<!-- <!-- Footer - News --> -->
-					<!-- <div class="col-lg-4 footer_col"> -->
-						<!-- <div class="footer_news footer_column"> -->
-							<!-- <div class="footer_title">Useful Links</div> -->
-							<!-- <ul> -->
-								<!-- <li> -->
+					<div class="col-lg-4 footer_col">
+						<div class="footer_news footer_column">
+							<div class="footer_title">Ligas</div>
+							<ul>
+								<li>
+									<div class="footer_news_title"><a href="news.html">Terminos y Condiciones</a></div>
+									<div class="footer_news_date">Conoce mas</div>
+								</li>
+								<li>
+									<div class="footer_news_title"><a href="news.html">Privacidad</a></div>
+									<div class="footer_news_date">Conoce mas</div>
+								</li>
+								<li>
 									<!-- <div class="footer_news_title"><a href="news.html">Aliquam ac eleifend metus</a></div> -->
-									<!-- <div class="footer_news_date">March 10, 2018</div> -->
-								<!-- </li> -->
-								<!-- <li> -->
-									<!-- <div class="footer_news_title"><a href="news.html">Donec in libero sit amet mi vulputate</a></div> -->
-									<!-- <div class="footer_news_date">March 10, 2018</div> -->
-								<!-- </li> -->
-								<!-- <li> -->
-									<!-- <div class="footer_news_title"><a href="news.html">Aliquam ac eleifend metus</a></div> -->
-									<!-- <div class="footer_news_date">March 10, 2018</div> -->
-								<!-- </li> -->
-							<!-- </ul> -->
-						<!-- </div> -->
-					<!-- </div> -->
-				<!-- </div> -->
-			<!-- </div> -->
-		<!-- </div> -->
-		<!-- <div class="copyright"> -->
-			<!-- <div class="container"> -->
-				<!-- <div class="row"> -->
-					<!-- <div class="col"> -->
-						<!-- <div class="copyright_content d-flex flex-lg-row flex-column align-items-lg-center justify-content-start"> -->
-							<!-- <div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> -->
-<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-<!-- <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div> -->
-							<!-- <div class="footer_social ml-lg-auto"> -->
-								<!-- <ul> -->
-									<!-- <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li> -->
-									<!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
-									<!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
-									<!-- <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
-									<!-- <li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li> -->
-									<!-- <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li> -->
-								<!-- </ul> -->
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </div> -->
-				<!-- </div> -->
-			<!-- </div>			 -->
-		<!-- </div> -->
-	<!-- </footer> -->
-<!-- </div> -->
+									<!-- <div class="footer_news_date">Conoce mas</div> -->
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
